# cgfs

./: .gitignore  pyproject.toml
cgfs/: __main__.py  camera.py  canvas.py  cgfs_types.py  color.py  raytracer.py  scene.py  types.py  utils.py  viewport.py
cgfs/light/: __init__.py  ambient_light.py  directional_light.py  point_light.py
cgfs/objects/: scene_object.py  sphere.py
cgfs/scene_object/: __init__.py  box.py  sphere.py
tests/: test_canvas.py
